style: fixing the scrollbar thumb active

--- a/css/reset.css
+++ b/css/reset.css
@@ -78,7 +78,7 @@ img {
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--roxa-clara);
 }
-::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:active {
     background-color: var(--roxa-escura);
 }
 
